Add css to social media links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,15 @@ body {
 
 
 /* Footer */
+
+footer {
+    height: 150px;
+}
+
+.social-media {
+    text-align: center;
+}
+
+.social-media > li {
+    display: inline;
+}
