Add link to stylesheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: pt-serif, sans-serif;
     font-weight: 400;
-    color: dodgerblue;
+    color: rgb(255, 30, 161);
 }
 /* Header */
 
